# sniffer-agent

./: .gitignore  GITHUB_PUSH_GUIDE.md  README.md  database_tables.md  dns_features.md  final-table-creation-query.sql  sniffer_dga&c2.py  sniffer_explanations.md  sniffer_tunneling.py  table-creation-query.sql  unified_sniffer_architecture_theory.md
unified_sniffer_agent/: CMakeLists.full.txt  CMakeLists.minimal.txt  CMakeLists.txt  InstallationLog.txt  vcpkg-configuration.json  vcpkg.json
unified_sniffer_agent/build_full/: ALL_BUILD.vcxproj  CMakeCache.txt  MinimalSnifferTest.sln  UnifiedSnifferAgent.vcxproj  UnifiedSnifferAgent.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
unified_sniffer_agent/build_full/UnifiedSnifferAgent.dir/Release/: UnifiedSnifferAgent.exe.recipe
unified_sniffer_agent/build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MinimalSniffer.vcxproj  MinimalSniffer.vcxproj.filters  MinimalSnifferTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
unified_sniffer_agent/build_minimal/MinimalSniffer.dir/Release/: MinimalSniffer.exe.recipe
unified_sniffer_agent/installer/windows/: Build-Agent.ps1  Install-Prereqs.ps1  Run-Agent.ps1
unified_sniffer_agent/scripts/: bootstrap-vcpkg.ps1
unified_sniffer_agent/src/: main.cpp  minimal_test.cpp
unified_sniffer_agent/src/app/: gui.cpp  gui.h
unified_sniffer_agent/src/capture/: packet_capture.cpp  packet_capture.h  packet_dispatcher.cpp  packet_dispatcher.h
unified_sniffer_agent/src/common/: time_utils.cpp  time_utils.h  types.h
unified_sniffer_agent/src/flows/: flow_tracker.cpp  flow_tracker.h  running_stats.h
unified_sniffer_agent/src/parsers/: dns_parser.cpp  dns_parser.h
unified_sniffer_agent/src/storage/: db_writer.cpp  db_writer.h  mysql_client.cpp  mysql_client.h  sql_templates.h
(+57 files in other folders)
